[gd_scene load_steps=5 format=3 uid="uid://dj1fad7aqmwsb"]

[ext_resource type="Script" path="res://scenes/Main/Main.gd" id="1_hq6ve"]
[ext_resource type="PackedScene" uid="uid://r5ggcferafkq" path="res://scenes/Main/Background.tscn" id="2_3oyof"]
[ext_resource type="FontFile" uid="uid://d1ss5yh1f1vf5" path="res://assets/fonts/Audiowide-Regular.ttf" id="3_k1t2f"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_arff3"]

[node name="Main" type="Node"]
script = ExtResource("1_hq6ve")

[node name="Settings" type="CanvasLayer" parent="."]
visible = false

[node name="Background" parent="Settings" instance=ExtResource("2_3oyof")]

[node name="BackButton" type="Button" parent="Settings"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -100.0
offset_top = 291.0
offset_right = 89.0
offset_bottom = 345.0
grow_horizontal = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_colors/font_color = Color(0.380392, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_k1t2f")
theme_override_font_sizes/font_size = 36
theme_override_styles/normal = SubResource("StyleBoxEmpty_arff3")
text = "< BACK"

[node name="MasterVolumeSlider" type="HSlider" parent="Settings"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -122.0
offset_right = 151.0
offset_bottom = -102.0
grow_horizontal = 2
grow_vertical = 2
tooltip_text = "MASTER VOLUME"
step = 5.0
value = 50.0

[node name="MasterVolumeLabel" type="Label" parent="Settings"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -80.0
offset_top = -145.0
offset_right = 81.0
offset_bottom = -124.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_k1t2f")
text = "MASTER VOLUME"

[node name="Main" type="CanvasLayer" parent="."]

[node name="Background" parent="Main" instance=ExtResource("2_3oyof")]

[node name="StartButton" type="Button" parent="Main"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -91.0
offset_top = 313.0
offset_right = 92.0
offset_bottom = 398.0
grow_horizontal = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_k1t2f")
theme_override_font_sizes/font_size = 66
theme_override_styles/normal = SubResource("StyleBoxEmpty_arff3")
text = "START"

[node name="SettingsButton" type="Button" parent="Main"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -99.0
offset_top = 428.0
offset_right = 102.0
offset_bottom = 472.0
grow_horizontal = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_k1t2f")
theme_override_font_sizes/font_size = 46
theme_override_styles/normal = SubResource("StyleBoxEmpty_arff3")
text = "SETTINGS"

[node name="ExitButton" type="Button" parent="Main"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -124.0
offset_top = 741.0
offset_right = 139.0
offset_bottom = 801.0
grow_horizontal = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_colors/font_color = Color(0.352941, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_k1t2f")
theme_override_font_sizes/font_size = 46
theme_override_styles/normal = SubResource("StyleBoxEmpty_arff3")
text = "EXIT"

[connection signal="pressed" from="Settings/BackButton" to="." method="_on_settings_back_button_pressed"]
[connection signal="pressed" from="Main/StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="Main/SettingsButton" to="." method="_on_settings_button_pressed"]
[connection signal="pressed" from="Main/ExitButton" to="." method="_on_exit_button_pressed"]
